--- a/data/style.css
+++ b/data/style.css
@@ -2,20 +2,28 @@ html {
   font-family: Arial;
   text-align: center;
 }
+body {
+  background-color: #333333;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
 h1 {
-  color: #0F3376;
-  padding: 2vh;
+  color: #7ea1e2;
+  padding: 0vh;
 }
 p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 .units {
   font-size: 1.2rem;
  }
 .sensor-labels {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   vertical-align:middle;
-  padding-bottom: 15px;
+  padding-bottom: 1px;
 }
 div.smoothie-chart-tooltip {
   background: #444;
@@ -58,6 +66,9 @@ label {
   height: 20px;
 }
 input {
+  background-color: #1f1f1f;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
   width: 70px;
   height: 25px;
   margin: auto;
